# redact-minimize

./: README.md
conserver-link-minimize/: .coverage  README.md  config.yaml  pyproject.toml
conserver-link-minimize/conserver_link_minimize/: __init__.py  minimization_logic.py
conserver-link-minimize/tests/: test_basic.py  test_integration.py
conserver-link-redact/: .coverage  README.md  config.yaml  pyproject.toml
conserver-link-redact/conserver_link_redact/: __init__.py  redaction_logic.py
conserver-link-redact/tests/: test_basic.py
