[tool.poetry]
name = "conserver-link-minimize"
version = "0.1.0"
description = "A vCon link for minimizing Conserver conversation metadata"
readme = "README.md"
packages = [{ include = "conserver_link_minimize" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pydash = "^7.0.0"
openai = "*"
tenacity = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
