[tool.poetry]
name = "conserver-link-redact"
version = "0.1.0"
description = "A vCon link for processing and redacting Conserver conversation metadata"
readme = "README.md"
packages = [{ include = "conserver_link_redact" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
